--- a/sass/block/_about.scss
+++ b/sass/block/_about.scss
@@ -30,6 +30,10 @@
       grid-area: p3;
    }
 
+   & .container:first-of-type > p:last-of-type {
+      margin: 75px 0px;
+   }
+
    .container {
       margin-top: 6rem;
    }
@@ -58,7 +62,7 @@
       flex-wrap: wrap;
       justify-content: space-evenly;
       align-items: center;
-      padding: 10rem 20rem;
+      padding: 10rem 10rem;
       color: $color-secondary;
       list-style: none;
 
@@ -87,19 +91,60 @@
       background-size: cover;
       background-position: left;
       z-index: -1;
+
+
    }
 
    & p:last-child::after {
       content: "";
       position: absolute;
-      top: 53rem;
-      right: -3rem;
+      top: 43rem;
+      right: -10rem;
       width: 50rem;
       height: 40rem;
       background-image: url("../images/ink-sketches-03.svg");
       background-size: cover;
       background-position: right;
       z-index: -1;
+   }
+
+   @media (max-width: 1360px)  {
+      & h2::before {
+         top: 13.5%;
+      }
+
+      blockquote {
+         margin-top: 38rem;
+      }
+
+      & p:last-child::after {
+         top: 38%;
+         right: -12rem;
+      }
+
+      & .container:first-of-type > p:last-of-type {
+         margin: 200px 0px 200px 20px;
+         width: 80%;
+      }
+   }
+
+   @media (max-width: 900px)  {
+      & p:last-child::after {
+         top: 33%;
+         right: -13rem;
+      }
+
+      & .container:first-of-type > p:last-of-type {
+         margin: 50px 0px 50px 20px;
+         width: 60%;
+      }
+   }
+
+   @media (max-width: 625px) {
+      & p:last-child::after {
+         top: 35%;
+         right: -16rem;
+      }
    }
 
    //small screen
