--- a/sass/block/_guidelines.scss
+++ b/sass/block/_guidelines.scss
@@ -5,10 +5,13 @@
    }
 
    & a {
-      @include paragraph-font(35px);
+      @include paragraph-font(25px);
       border-bottom: solid 4px $color-primary-alt;
       color: $color-primary;
       text-decoration: none;
+      margin: auto -1px; //removed the extra gap between the p and a text
+
+      
    }
 
    h3 {
@@ -47,7 +50,6 @@
 
 
       a {
-         font-size: 100%;
          margin: auto -1px; //removed the extra gap between the p and a text
       }
 
