--- a/sass/block/_profile.scss
+++ b/sass/block/_profile.scss
@@ -11,6 +11,8 @@
       text-decoration: none;
       color: $color-primary;
       border-bottom: solid 4px $color-primary-alt;
+      margin: auto -1px; //removed the extra gap between the p and a text
+
    }
 
    .container > a {
