--- a/sass/block/_contribute.scss
+++ b/sass/block/_contribute.scss
@@ -4,6 +4,8 @@
       text-decoration: none;
       color: $color-primary;
       border-bottom: solid 4px $color-primary-alt;
+      margin: auto -1px; //removed the extra gap between the p and a text
+
    }
 
    //Grid for first container
