--- a/sass/block/_styles.scss
+++ b/sass/block/_styles.scss
@@ -22,6 +22,7 @@
 
       a{
          color: $color-secondary;
+         margin: auto -1px; //removed the extra gap between the p and a text
       }
    }
 
