guidelines, contribute, and styles done

--- a/sass/block/_guidelines.scss
+++ b/sass/block/_guidelines.scss
@@ -21,7 +21,7 @@
    .link-guidelines {
       border: none;
       color: $color-secondary;
-      padding: 5rem;
+      padding: 6rem 5rem 4rem 5rem;
       background-image: url(../../images/ink-sketches-07.svg);
       background-size: cover;
       background-position: center;
