--- a/public/style.css
+++ b/public/style.css
@@ -474,7 +474,7 @@ nav a {
 }
 @media (max-width: 1360px) {
   #about h2::before {
-    top: 13.5%;
+    top: 13%;
   }
   #about blockquote {
     margin-top: 38rem;
@@ -587,7 +587,7 @@ nav a {
 #guidelines .link-guidelines {
   border: none;
   color: #ffffff;
-  padding: 5rem;
+  padding: 6rem 5rem 4rem 5rem;
   background-image: url(../../images/ink-sketches-07.svg);
   background-size: cover;
   background-position: center;
@@ -669,11 +669,19 @@ nav a {
   list-style: decimal;
   list-style-type: decimal;
 }
+#contribute .container:nth-of-type(2) {
+  margin-top: 6rem;
+}
+@media (max-width: 1064px) {
+  #contribute .container:nth-of-type(2) {
+    margin-top: 4rem;
+  }
+}
 #contribute h2::before {
   content: "";
   position: absolute;
   top: -3rem;
-  left: 8rem;
+  left: -7rem;
   width: 30rem;
   height: 30rem;
   background-image: url("../images/ink-sketches-03.svg");
@@ -712,7 +720,8 @@ nav a {
 }
 #contribute footer .container a {
   border: none;
-  background-color: #ffffff;
+  background-color: #110F1A;
+  color: #ffffff;
   padding: 3rem 1rem;
   border-radius: 1rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
@@ -742,6 +751,14 @@ nav a {
     background-image: url("../images/ink-sketches-02.svg");
     background-size: cover;
     z-index: -1;
+  }
+}
+@media (max-width: 800px) {
+  #contribute h2::before {
+    left: -9rem;
+  }
+  #contribute > :first-child {
+    grid-template-columns: 17fr 23fr;
   }
 }
 @media (max-width: 550px) {
@@ -813,7 +830,7 @@ nav a {
   text-align: center;
   border: none;
   color: #ffffff;
-  padding: 3rem;
+  padding: 5rem 3rem 1rem 3rem;
   margin: 0 auto;
   background-image: url(../../images/ink-sketches-08.svg);
   display: block;
