--- a/sass/block/_contribute.scss
+++ b/sass/block/_contribute.scss
@@ -34,6 +34,14 @@
       list-style-type: decimal;
    }
 
+   .container:nth-of-type(2) {
+      margin-top: 6rem;
+
+      @media (max-width: 1064px) {
+         margin-top: 4rem;         
+      }
+   }
+
    //Background Images
    position: relative;
 
@@ -41,7 +49,7 @@
       content: "";
       position: absolute;
       top: -3rem;
-      left: 8rem;
+      left: -7rem;
       width: 30rem;
       height: 30rem;
       background-image: url("../images/ink-sketches-03.svg");
@@ -83,7 +91,8 @@
 
       .container a {
          border: none;
-         background-color: $color-secondary;
+         background-color: $color-primary;
+         color: $color-secondary;
          padding: 3rem 1rem;
          border-radius: 1rem;
          box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
@@ -100,6 +109,16 @@
    }
 
    @include small-screen;
+
+   @media (max-width:800px) {
+      & h2::before {
+         left: -9rem;
+      }
+
+      & > :first-child {
+         grid-template-columns: 17fr 23fr;
+      }
+   }
 
 
    @media (max-width: 550px) {
