--- a/sass/block/_styles.scss
+++ b/sass/block/_styles.scss
@@ -31,7 +31,7 @@
       text-align: center;
       border: none;
       color: $color-secondary;
-      padding: 3rem;
+      padding: 5rem 3rem 1rem 3rem;
       margin: 0 auto;
       background-image: url(../../images/ink-sketches-08.svg);
       display: block;
