--- a/sass/block/_profile.scss
+++ b/sass/block/_profile.scss
@@ -16,10 +16,13 @@
    }
 
    .container > a {
+      display: block;
+      margin: 0 auto;
+      margin-top: 240px;
       text-align: center;
       border: none;
       color: $color-secondary;
-      padding: 3rem;
+      padding: 5rem 2rem 1rem 2rem;
       background-image: url(../../images/ink-sketches-08.svg);
       display: block;
       background-size: cover;
@@ -30,6 +33,10 @@
       z-index: -1;
       transition: background-size 0.3s ease-in-out;
 
+      @media (max-width: 890px) {
+         margin-top: 125px;
+      }
+
    }//CENTER BUTTON TEXT BETTER
 
    //background image 
@@ -37,13 +44,39 @@
       content: "";
       position: absolute;
       top: -10rem;
-      right: 1rem;
+      right: 0rem;
       width: 60rem;
       height: 50rem;
       background-image: url("../images/ink-sketches-05.svg");
       background-size: cover;
       background-position: right;
       z-index: -1;
+
+      @media (max-width:1310px) {
+         width: 48rem;
+         height: 40rem;
+      }
+
+      @media (max-width: 1050px) {
+         width: 36rem;
+         height: 30rem;
+         top: -8rem;         
+      }
+
+      @media (max-width: 890px) {
+         width: 30rem;
+         height: 25rem;
+         top: -5rem;
+         right: -4rem;         
+      }
+
+      @media (max-width: 690px) {
+         width: 21rem;
+         height: 18.5rem;
+         top: -4rem;
+         right: -5rem;
+      }
+      
    }
 
    @media (max-width: 550px) {
