--- a/sass/block/_footer.scss
+++ b/sass/block/_footer.scss
@@ -43,7 +43,7 @@
    }
 
    //background image
-   background-image: url(../../images/ink-sketches-06.svg);
+   background-image: url(../../public/images/ink-sketches-06.svg);
    background-size: cover;
    background-position: top;
    z-index: -1;
