--- a/sass/block/_about.scss
+++ b/sass/block/_about.scss
@@ -89,7 +89,7 @@
       left: 0;
       width: 50rem;
       height: 40rem;
-      background-image: url("../images/ink-sketches-01.svg");
+      background-image: url("../../public/images/ink-sketches-01.svg");
       background-size: cover;
       background-position: left;
       z-index: -1;
@@ -104,7 +104,7 @@
       right: -10rem;
       width: 50rem;
       height: 40rem;
-      background-image: url("../images/ink-sketches-03.svg");
+      background-image: url("../../public/images/ink-sketches-03.svg");
       background-size: cover;
       background-position: right;
       z-index: -1;
