--- a/sass/block/_contribute.scss
+++ b/sass/block/_contribute.scss
@@ -52,7 +52,7 @@
       left: -7rem;
       width: 30rem;
       height: 30rem;
-      background-image: url("../images/ink-sketches-03.svg");
+      background-image: url("../../public/images/ink-sketches-03.svg");
       background-size: cover;
       background-position: left;
       z-index: -1;
@@ -102,7 +102,7 @@
       border: none;
       color: $color-secondary;
       padding: 4rem;
-      background-image: url(../../images/ink-sketches-10.svg);
+      background-image: url(../../public/images/ink-sketches-10.svg);
       background-size: cover;
       background-position: center;
 
