--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -11,7 +11,7 @@ header {
       right: -2rem;
       width: 60rem;
       height: 50rem;
-      background-image: url("../images/ink-sketches-02.svg");
+      background-image: url("../../public/images/ink-sketches-02.svg");
       background-size: auto 100%; /* Maintain aspect ratio with full height */
       background-position: right calc(100% - 100%) top; /*Pin background image to top-right*/
       background-repeat: no-repeat;
@@ -34,7 +34,7 @@ header {
          bottom: 0;
          width: 60rem;
          height: 50rem;
-         background-image: url("../images/ink-sketches-02.svg");
+         background-image: url("../../public/images/ink-sketches-02.svg");
          background-size: auto 100%; 
          background-position: center bottom; /* Pin background image to bottom-left */
          background-repeat: no-repeat;
@@ -60,7 +60,7 @@ header {
    .link-github {
       color: $color-secondary;
       padding: 3rem;
-      background-image: url(../../images/ink-sketches-08.svg);
+      background-image: url(../../public/images/ink-sketches-08.svg);
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
