--- a/sass/block/_about.scss
+++ b/sass/block/_about.scss
@@ -68,7 +68,7 @@
       color: $color-secondary;
       list-style: none;
 
-      background-image: url(../images/ink-sketches-10.svg);
+      background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-10.svg);
       background-size: cover;
       background-position: center;
       z-index: -1;
