--- a/sass/block/_guidelines.scss
+++ b/sass/block/_guidelines.scss
@@ -22,7 +22,7 @@
       border: none;
       color: $color-secondary;
       padding: 6rem 5rem 4rem 5rem;
-      background-image: url(../../public/images/ink-sketches-07.svg);
+      background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-07.svg);
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
