--- a/sass/block/_profile.scss
+++ b/sass/block/_profile.scss
@@ -23,7 +23,7 @@
       border: none;
       color: $color-secondary;
       padding: 5rem 2rem 1rem 2rem;
-      background-image: url(../../public/images/ink-sketches-08.svg);
+      background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-08.svg);
       display: block;
       background-size: cover;
       background-position: center;
@@ -47,7 +47,7 @@
       right: 0rem;
       width: 60rem;
       height: 50rem;
-      background-image: url("../../public/images/ink-sketches-05.svg");
+      background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-05.svg);
       background-size: cover;
       background-position: right;
       z-index: -1;
