--- a/sass/global/_layout.scss
+++ b/sass/global/_layout.scss
@@ -57,7 +57,7 @@ body {
 
       &::after {
          content: "";
-         background-image: url("../../public/images/ink-sketches-02.svg");
+         background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-02.svg);
          background-size: cover;
          z-index: -1;
       }
