--- a/sass/block/_styles.scss
+++ b/sass/block/_styles.scss
@@ -33,7 +33,7 @@
       color: $color-secondary;
       padding: 5rem 3rem 1rem 3rem;
       margin: 0 auto;
-      background-image: url(../../public/images/ink-sketches-08.svg);
+      background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-08.svg);
       display: block;
       background-size: cover;
       background-position: center;
