--- a/public/style.css
+++ b/public/style.css
@@ -721,8 +721,8 @@ nav a {
 }
 #contribute footer .container a {
   border: none;
-  background-color: #110F1A;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #110F1A;
   padding: 3rem 1rem;
   border-radius: 1rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
