--- a/sass/block/_contribute.scss
+++ b/sass/block/_contribute.scss
@@ -91,8 +91,8 @@
 
       .container a {
          border: none;
-         background-color: $color-primary;
-         color: $color-secondary;
+         background-color: $color-secondary;
+         color: $color-primary;
          padding: 3rem 1rem;
          border-radius: 1rem;
          box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
