--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -1,6 +1,6 @@
 header {
    display: grid;
-   grid-template-columns: 1fr 1fr;
+   grid-template-columns: 9fr 10fr;
    color: $color-primary;
    position: relative; /* Ensure positioning context for ::after */
 
@@ -80,6 +80,12 @@ header {
       }
 
       min-height: 1400px;
+   }
+
+   &::after {
+      width: 32rem;
+      height: 28rem;
+      left: 51%;
    }
 }
 
