--- a/public/style.css
+++ b/public/style.css
@@ -236,32 +236,24 @@ header::after {
     display: block;
     text-align: center;
     position: relative;
-    min-height: 1300px;
-    /* Ensure enough space for the image */
     margin-bottom: -220px;
   }
   header::after {
-    content: "";
-    position: absolute;
-    top: auto;
+    bottom: 12rem;
     left: 48%;
     /* Horizontally center the background image */
-    transform: translateX(-50%);
-    bottom: 0;
-    width: 60rem;
-    height: 50rem;
-    background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-02.svg);
-    background-size: auto 100%;
+    transform: translateX(-50%) translateY(64%);
+    background-size: contain;
     background-position: center bottom;
     /* Pin background image to bottom-left */
-    background-repeat: no-repeat;
-    z-index: -1;
   }
 }
-@media (max-width: 1250px) and (max-width: 870px) {
+@media (max-width: 1250px) and (max-width: 830px) {
   header::after {
     width: 40rem;
     height: 35rem;
+    top: 105%;
+    transform: translateX(-50%);
   }
 }
 header svg {
@@ -313,17 +305,14 @@ header .link-github svg path {
   }
 }
 @media (max-width: 550px) {
-  header {
-    min-height: 1400px;
-  }
   header h1 {
     margin: 20px;
   }
-}
-header::after {
-  width: 32rem;
-  height: 28rem;
-  left: 51%;
+  header::after {
+    width: 32rem;
+    height: 28rem;
+    left: 51%;
+  }
 }
 
 .skip-link {
@@ -389,6 +378,16 @@ nav a {
     padding-bottom: 40px;
     display: block;
     text-align: center;
+  }
+}
+@media (max-width: 1250px) {
+  nav {
+    margin-top: 60rem;
+  }
+}
+@media (max-width: 830px) {
+  nav {
+    margin-top: 48rem;
   }
 }
 
@@ -460,9 +459,10 @@ nav a {
   top: 7rem;
   left: 0;
   width: 50rem;
-  height: 40rem;
+  height: 35rem;
   background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-01.svg);
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: left;
   z-index: -1;
 }
@@ -474,7 +474,8 @@ nav a {
   width: 50rem;
   height: 40rem;
   background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-03.svg);
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: right;
   z-index: -1;
 }
@@ -542,31 +543,85 @@ nav a {
     display: block;
   }
   #about h2::before {
-    top: 28rem;
     max-width: 100%;
+    margin-top: 5.5rem;
   }
+}
+@media (max-width: 550px) and (max-width: 340px) {
+  #about h2::before {
+    margin-top: 13rem;
+  }
+}
+@media (max-width: 550px) {
   #about blockquote {
     margin-top: 400px;
   }
+}
+@media (max-width: 550px) {
   #about p:last-child::after {
-    top: 95rem;
+    width: 42.5rem;
+    height: 34rem;
+    top: 48%;
+    left: 42%;
+    transform: translateX(-50%);
   }
+}
+@media (max-width: 550px) and (max-width: 430px) {
+  #about p:last-child::after {
+    top: 50.5%;
+  }
+}
+@media (max-width: 550px) and (max-width: 362px) {
+  #about p:last-child::after {
+    top: 53%;
+  }
+}
+@media (max-width: 550px) and (max-width: 300px) {
+  #about p:last-child::after {
+    top: 55.25%;
+  }
+}
+@media (max-width: 550px) and (max-width: 255px) {
+  #about p:last-child::after {
+    top: 57%;
+  }
+}
+@media (max-width: 550px) {
   #about .container:first-of-type p:nth-child(5) {
     margin-top: -45px;
-    max-width: 45%;
-    justify-self: right;
+    width: 100%;
+    justify-self: center;
   }
+}
+@media (max-width: 550px) {
+  #about .container:first-of-type > p:last-of-type {
+    margin-right: 25px;
+    width: 90%;
+  }
+}
+@media (max-width: 550px) {
+  #about .container:nth-of-type(2) h2 {
+    margin-top: 40rem;
+  }
+}
+@media (max-width: 550px) {
   #about .container:last-of-type p:nth-of-type(3) {
     margin-top: -45px;
   }
+}
+@media (max-width: 550px) {
   #about .container:last-of-type p:last-of-type {
     margin-top: 45px;
   }
+}
+@media (max-width: 550px) {
   #about ul {
     padding: 4rem 4rem;
     justify-self: center;
     font-size: 250%;
   }
+}
+@media (max-width: 550px) {
   #about .container:last-of-type {
     margin-bottom: -525px;
   }
@@ -767,6 +822,11 @@ nav a {
     grid-template-columns: 17fr 23fr;
   }
 }
+@media (max-width: 600px) {
+  #contribute footer .container a {
+    display: block;
+  }
+}
 @media (max-width: 550px) {
   #contribute > :first-child {
     display: grid;
@@ -797,13 +857,13 @@ nav a {
     padding: 2rem 0.2rem;
     border-radius: 1rem;
     font-size: 1.4em;
-    margin: 10px;
+    margin: 10px 0px;
   }
 }
 @media (max-width: 550px) and (max-width: 375px) {
   #contribute footer .container a {
     font-size: 1.3em;
-    margin: 8px;
+    margin: 8px -1px;
   }
 }
 
@@ -816,7 +876,7 @@ nav a {
 #styles ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 30px 20px;
+  gap: 30px 5px;
   list-style: none;
   padding-left: 0px;
 }
@@ -826,7 +886,7 @@ nav a {
   color: #ffffff;
   background-color: #89192F;
   border-radius: 1rem;
-  padding: 4rem 1rem;
+  padding: 4rem 0.75rem;
 }
 #styles li a {
   color: #ffffff;
@@ -846,7 +906,7 @@ nav a {
   height: 6rem;
   z-index: -1;
 }
-@media (max-width: 550px) {
+@media (max-width: 600px) {
   #styles ul {
     display: block;
     padding-left: 0px;
@@ -961,9 +1021,10 @@ nav a {
 }
 .page-footer ul {
   list-style: none;
-  margin: 6rem 1rem;
+  margin: 6rem 0.75rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding-left: 0px;
 }
 .page-footer ul li {
   background-color: #ffffff;
@@ -1011,14 +1072,13 @@ nav a {
     z-index: -1;
   }
 }
-@media (max-width: 550px) {
+@media (max-width: 600px) {
   .page-footer {
     margin-top: 2rem;
     height: 76rem;
   }
   .page-footer ul {
     display: block;
-    padding-left: 0px;
   }
   .page-footer li {
     height: 7rem;
