--- a/sass/block/_footer.scss
+++ b/sass/block/_footer.scss
@@ -13,9 +13,10 @@
 
    ul {
       list-style: none;
-      margin: 6rem 1rem;
+      margin: 6rem .75rem;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr ;
+      padding-left: 0px;
 
       li {
          background-color: $color-secondary;
@@ -51,14 +52,13 @@
    @include small-screen;
 
 
-   @media (max-width: 550px) {
+   @media (max-width: 600px) {
       margin-top: 2rem;
       height: 76rem;
 
 
       ul {
          display: block;
-         padding-left: 0px;
       }
 
 
