--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -22,27 +22,20 @@ header {
       display: block;
       text-align: center;
       position: relative;
-      min-height: 1300px; /* Ensure enough space for the image */
       margin-bottom: -220px;
   
       &::after {
-         content: "";
-         position: absolute;
-         top: auto;
+         bottom: 12rem;
          left: 48%; /* Horizontally center the background image */
-         transform: translateX(-50%);
-         bottom: 0;
-         width: 60rem;
-         height: 50rem;
-         background-image: url(https://echlarson.github.io/WDD331StyleStage/images/ink-sketches-02.svg);
-         background-size: auto 100%; 
+         transform: translateX(-50%) translateY(64%);
+         background-size: contain;
          background-position: center bottom; /* Pin background image to bottom-left */
-         background-repeat: no-repeat;
-         z-index: -1;
 
-         @media (max-width: 870px) {
+         @media (max-width: 830px) {
             width: 40rem;
             height: 35rem;
+            top: 105%;
+            transform: translateX(-50%);
          }
       }
    }
@@ -79,13 +72,11 @@ header {
          margin: 20px;
       }
 
-      min-height: 1400px;
-   }
-
-   &::after {
-      width: 32rem;
-      height: 28rem;
-      left: 51%;
+      &::after {
+         width: 32rem;
+         height: 28rem;
+         left: 51%;
+      }
    }
 }
 
