--- a/sass/block/_profile.scss
+++ b/sass/block/_profile.scss
@@ -69,21 +69,30 @@
          top: -5rem;
          right: -4rem;         
       }
-
-      @media (max-width: 690px) {
-         width: 21rem;
-         height: 18.5rem;
-         top: -4rem;
-         right: -5rem;
-      }
       
+   }
+
+   @media (max-width: 690px) {
+      &::after {
+         width: 85%;
+         height: 85%;
+         top: 75px;
+         left: 50%;
+         transform: translateX(-50%);
+         background-size: contain;
+         background-repeat: no-repeat;
+      }
+
+      .container a {
+         margin-top: 470px;
+      }
    }
 
    @media (max-width: 550px) {
       .container > a {
-         margin: 2px;
          padding-bottom: 24px;
          padding-left: 24px;
+         margin-top: 400px;
       }
    }
 }
