--- a/sass/block/_footer.scss
+++ b/sass/block/_footer.scss
@@ -1,5 +1,5 @@
 .page-footer {
-   padding: 4rem 1rem;
+   padding: 8rem 1rem 2rem 1rem;
    text-align: center;
    height: 48rem;
 
@@ -50,12 +50,18 @@
    z-index: -1;
 
    @include small-screen;
+   @media (max-width: 550px) {
+      padding: 8rem 1rem 0rem 1rem;
 
+      p:first-of-type, p:first-of-type a:first-of-type {
+         color: $color-primary-alt;
+         text-shadow: 0px 0px 1px white;
+      }
+   }
 
    @media (max-width: 600px) {
       margin-top: 2rem;
       height: 76rem;
-
 
       ul {
          display: block;
@@ -67,6 +73,8 @@
          line-height: 7rem;
          text-align: center;
       }
+
+      
    }
 
 
